tdf#117862 crash in profile export dialog

Change-Id: Ibb1ab10707262e8f0d36a805ab08562a5f0fecf4
Reviewed-on: https://gerrit.libreoffice.org/55033
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>